--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,11 +37,13 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
-    //For CodeView
-    implementation 'com.github.AmrDeveloper:CodeView:1.0.0'
+//    For CodeView
+//    implementation 'com.github.AmrDeveloper:CodeView:1.0.0'
 
     //For Api
     implementation 'com.google.code.gson:gson:2.9.0'
-    implementation'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation'com.squareup.retrofit2:converter-gson:2.0.2'
+//    implementation'com.squareup.retrofit2:retrofit:2.9.0'
+//    implementation'com.squareup.retrofit2:converter-gson:2.0.2'
+    implementation 'com.android.volley:volley:1.2.1'
+
 }
