clean code , resove the max limit exceeded error

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,9 +41,11 @@ dependencies {
 //    implementation 'com.github.AmrDeveloper:CodeView:1.0.0'
 
     //For Api
-    implementation 'com.google.code.gson:gson:2.9.0'
+    implementation 'com.google.code.gson:gson:2.10'
 //    implementation'com.squareup.retrofit2:retrofit:2.9.0'
 //    implementation'com.squareup.retrofit2:converter-gson:2.0.2'
     implementation 'com.android.volley:volley:1.2.1'
+    implementation 'com.squareup.okhttp3:okhttp:4.11.0'
+
 
 }
