--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,13 +17,13 @@
         android:theme="@style/Theme.Algorithm_Visualizer"
         tools:targetApi="31">
         <activity
-            android:name=".ForgotPassword"
+            android:name=".Login_Signup.ForgotPassword"
             android:exported="false" />
         <activity
-            android:name=".SignUp"
+            android:name=".Login_Signup.SignUp"
             android:exported="false" />
         <activity
-            android:name=".LoginActivity"
+            android:name=".Login_Signup.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -35,10 +35,7 @@
             android:name=".ChatBot"
             android:exported="false" />
         <activity
-            android:name=".HeapSort"
-            android:exported="false" />
-        <activity
-            android:name=".BinarySearch"
+            android:name=".Code_Snippet"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
